--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
   <div>It doesn't really matter. Use whatever feels most <strong>comfortable</strong> for you!</div>
   <div>Consider:<ul><li style='color:peru'>shareability</li><li style='color:chocolate'>technology</li><li style='color:sienna'>style</li></ul></div>
   <div><span style='color:slategray'>I like rainbows. 🌈</span></div>
-  <div>Steps: <ol><li>Goals</li><li>Self-assessment</li><li>Outline/structure</li><li>Slides</li><li><em>Presesnting</em></li><li>Tips and tricks</li></ol></div>
+  <div>Steps: <ol><li>Goals</li><li>Self-assessment</li><li>Outline/structure</li><li>Slides</li><li><em>Presenting</em></li><li>Tips and tricks</li></ol></div>
   <div><strong>Presenting</strong></div>
   <div>If you do <em>all the work</em> described, <strong>presenting</strong> should be a breeze.</div>
   <div>Five things:<ul><li style='color:blueviolet'>introduce yourself and the talk</li><li style='color:mediumslateblue'>slow down</li><li style='color:cornflowerblue'>give yourself what you need</li><li style='color:dodgerblue'>be excited!</li><li style='color:darkseagreen'>repeat yourself</li></ul></div>
@@ -97,7 +97,7 @@
   <div>If you are not <em>comfortable</em>, your talk will not be fun to listen to. <span style='color:cornflowerblue'>Give yourself what you need</span> to be successful.</div>
   <div>A <em>deep dive</em> is usually about something you like and know a lot about. It's okay to <span style='color:dodgerblue'>show your excitement</span> about the topic -- that's what brings people in!</div>
   <div>Have I mentioned the power of <span style='color:darkseagreen'>repetition</span>?</div>
-  <div>Steps: <ol><li>Goals</li><li>Self-assessment</li><li>Outline/structure</li><li>Slides</li><li>Presesnting</li><li><em>Tips and tricks</em></li></ol></div>
+  <div>Steps: <ol><li>Goals</li><li>Self-assessment</li><li>Outline/structure</li><li>Slides</li><li>Presenting</li><li><em>Tips and tricks</em></li></ol></div>
   <div><strong>Tips and tricks</strong></div>
   <div style='color:orangered'>1. Identify vocabulary</div>
   <div><span style='color:lightskyblue'>unconscious competence</span>: understanding a subject so deeply that it becomes second nature</div>
